--- a/DzkprojectV1/composer.json
+++ b/DzkprojectV1/composer.json
@@ -7,9 +7,10 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
+        "phpoffice/phpspreadsheet": "^1.4",
         "spatie/laravel-permission": "^2.20",
         "yajra/laravel-datatables": "^1.0"
     },
