--- a/DzkprojectV1/composer.json
+++ b/DzkprojectV1/composer.json
@@ -11,6 +11,7 @@
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
         "phpoffice/phpspreadsheet": "^1.4",
+        "spatie/laravel-fractal": "^5.4",
         "spatie/laravel-permission": "^2.20",
         "yajra/laravel-datatables": "^1.0"
     },
