--- a/DzkprojectV1/package.json
+++ b/DzkprojectV1/package.json
@@ -21,6 +21,7 @@
         "vue-router": "^3.0.1"
     },
     "dependencies": {
-        "bootstrap-vue": "^2.0.0-rc.11"
+        "bootstrap-vue": "^2.0.0-rc.11",
+        "sweetalert": "^2.1.0"
     }
 }
