--- a/DzkprojectV1/package.json
+++ b/DzkprojectV1/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.11",
-        "sweetalert": "^2.1.0"
+        "sweetalert": "^2.1.0",
+        "vue-moment": "^4.0.0"
     }
 }
