--- a/DzkprojectV1/package.json
+++ b/DzkprojectV1/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.11",
         "sweetalert": "^2.1.0",
         "vue-axios": "^2.1.4",
         "vue-notification": "^1.3.13",
