--- a/DzkprojectV1/package.json
+++ b/DzkprojectV1/package.json
@@ -22,14 +22,10 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.11",
-        "sweetalert": "^2.1.0",
-        "vue-moment": "^4.0.0"
-        "vue": "^2.5.7"
-    },
-    "dependencies": {
-        "bootstrap-vue": "^2.0.0-rc.11",
+        "moment": "^2.22.2",
         "sweetalert": "^2.1.0",
         "vue-axios": "^2.1.4",
+        "vue-notify-me": "^1.1.0",
         "vue-router": "^3.0.1",
         "vue-strap": "^1.1.40"
     }
