--- a/DzkprojectV1/package.json
+++ b/DzkprojectV1/package.json
@@ -26,6 +26,7 @@
         "sweetalert": "^2.1.0",
         "vue-axios": "^2.1.4",
         "vue-js-toggle-button": "^1.3.0",
+        "vue-multiselect": "^2.1.3",
         "vue-notify-me": "^1.1.0",
         "vue-router": "^3.0.1",
         "vue-strap": "^1.1.40"
