--- a/DzkprojectV1/package.json
+++ b/DzkprojectV1/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.11",
+        "crypto-js": "^3.1.9-1",
         "moment": "^2.22.2",
         "sweetalert": "^2.1.0",
         "vue-axios": "^2.1.4",
