--- a/DzkprojectV1/package.json
+++ b/DzkprojectV1/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.11",
         "crypto-js": "^3.1.9-1",
+        "google-maps": "^3.3.0",
         "moment": "^2.22.2",
         "sweetalert": "^2.1.0",
         "vue-axios": "^2.1.4",
@@ -30,6 +31,7 @@
         "vue-multiselect": "^2.1.3",
         "vue-notify-me": "^1.1.0",
         "vue-router": "^3.0.1",
+        "vue-simple-spinner": "^1.2.8",
         "vue-strap": "^1.1.40"
     }
 }
