--- a/DzkprojectV1/.env.example
+++ b/DzkprojectV1/.env.example
@@ -30,10 +30,10 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=657192
+PUSHER_APP_KEY=5f8f6478b5280a21c6e9
+PUSHER_APP_SECRET=c8ccbcebafc2982edfe6
+PUSHER_APP_CLUSTER=us2
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
