--- a/DzkprojectV1/composer.json
+++ b/DzkprojectV1/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.0",
         "phpoffice/phpspreadsheet": "^1.4",
+        "pusher/pusher-php-server": "~3.0",
         "spatie/laravel-permission": "^2.20",
         "werneckbh/laravel-qr-code": "^0.1.3",
         "yajra/laravel-datatables": "^1.0"
