--- a/DzkprojectV1/package.json
+++ b/DzkprojectV1/package.json
@@ -24,7 +24,9 @@
         "bootstrap-vue": "^2.0.0-rc.11",
         "crypto-js": "^3.1.9-1",
         "google-maps": "^3.3.0",
+        "laravel-echo": "^1.4.1",
         "moment": "^2.22.2",
+        "pusher-js": "^4.3.1",
         "sweetalert": "^2.1.0",
         "vue-axios": "^2.1.4",
         "vue-js-toggle-button": "^1.3.0",
